package com.lestscode.ecommerce.models;

public interface Validacao {

    boolean validar(String param);
}
