@startuml

title __ECOMMERCE's Class Diagram__\n

  namespace com.lestscode.ecommerce {
    class com.lestscode.ecommerce.EcommerceApplication {
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace controllers {
      class com.lestscode.ecommerce.controllers.CustomerController {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace controllers {
      class com.lestscode.ecommerce.controllers.ProductController {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      interface com.lestscode.ecommerce.models.Validacao {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace customer {
        class com.lestscode.ecommerce.models.customer.Customer {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace dto {
        class com.lestscode.ecommerce.models.dto.CustomerDto {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace dto {
        class com.lestscode.ecommerce.models.dto.ProductDto {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace forms {
        class com.lestscode.ecommerce.models.forms.AtualizarCustomerForm {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace forms {
        class com.lestscode.ecommerce.models.forms.CustomerForm {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace forms {
        class com.lestscode.ecommerce.models.forms.ProductForm {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.Order {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.OrderItem {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.OrderProductPK {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        enum OrderStatus {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace product {
        class com.lestscode.ecommerce.models.product.Product {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace repositories {
      interface com.lestscode.ecommerce.repositories.CustomerRepository {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace repositories {
      interface com.lestscode.ecommerce.repositories.OrderRepository {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace repositories {
      interface com.lestscode.ecommerce.repositories.ProductRepository {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace services {
      class com.lestscode.ecommerce.services.CustomerServices {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace services {
      class com.lestscode.ecommerce.services.ProductService {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace services {
      namespace interfaces {
        interface com.lestscode.ecommerce.services.interfaces.ICustomeService {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace services {
      namespace interfaces {
        interface com.lestscode.ecommerce.services.interfaces.IProductService {
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      interface com.lestscode.ecommerce.validation.CpfConstraint {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      class com.lestscode.ecommerce.validation.CpfValidator {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      interface com.lestscode.ecommerce.validation.DDD {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      class com.lestscode.ecommerce.validation.DddValidator {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      class com.lestscode.ecommerce.validation.FormErrorDto {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      interface com.lestscode.ecommerce.validation.Phone {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      class com.lestscode.ecommerce.validation.PhoneValidator {
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace validation {
      class com.lestscode.ecommerce.validation.ValidationErrorHandler {
      }
    }
  }
  

  com.lestscode.ecommerce.controllers.CustomerController o-- com.lestscode.ecommerce.services.interfaces.ICustomeService : customeService
  com.lestscode.ecommerce.controllers.CustomerController o-- com.lestscode.ecommerce.repositories.CustomerRepository : customerRepository
  com.lestscode.ecommerce.controllers.ProductController o-- com.lestscode.ecommerce.repositories.ProductRepository : productRepository
  com.lestscode.ecommerce.controllers.ProductController o-- com.lestscode.ecommerce.services.ProductService : productService
  com.lestscode.ecommerce.models.order.Order o-- com.lestscode.ecommerce.models.customer.Customer : customer
  com.lestscode.ecommerce.models.order.Order o-- com.lestscode.ecommerce.models.order.OrderStatus : status
  com.lestscode.ecommerce.models.order.OrderItem o-- com.lestscode.ecommerce.models.order.OrderProductPK : pk
  com.lestscode.ecommerce.models.order.OrderProductPK .up.|> java.io.Serializable
  com.lestscode.ecommerce.models.order.OrderProductPK o-- com.lestscode.ecommerce.models.order.Order : order
  com.lestscode.ecommerce.models.order.OrderProductPK o-- com.lestscode.ecommerce.models.product.Product : product
  com.lestscode.ecommerce.services.CustomerServices .up.|> com.lestscode.ecommerce.services.interfaces.ICustomeService
  com.lestscode.ecommerce.services.CustomerServices o-- com.lestscode.ecommerce.repositories.CustomerRepository : customerRepository
  com.lestscode.ecommerce.services.ProductService .up.|> com.lestscode.ecommerce.services.interfaces.IProductService
  com.lestscode.ecommerce.services.ProductService o-- com.lestscode.ecommerce.repositories.ProductRepository : productRepository
  com.lestscode.ecommerce.validation.CpfValidator .up.|> javax.validation.ConstraintValidator
  com.lestscode.ecommerce.validation.DddValidator .up.|> javax.validation.ConstraintValidator
  com.lestscode.ecommerce.validation.PhoneValidator .up.|> javax.validation.ConstraintValidator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
